--- a/lispy.ipynb
+++ b/lispy.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0bb39a69-2cdf-4bb0-8bdf-0ab24dc84649",
    "metadata": {},
    "outputs": [],
@@ -126,16 +126,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !git clone https://github.com/pythonfluente/gambiconf2024.git\n",
-    "# !cp gambiconf2024/*.py ."
+    "!git clone https://github.com/lispylab/cerrado.git\n",
+    "!cp cerrado/lis.py ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "14d532ac-f8db-4e54-ad2f-c45a2b708b8c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "%%script ./lis.py\n",
     "\n",
@@ -166,10 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ba5d43fe-476e-4e36-ac28-01e7f3c58f08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "%%script ./lis.py\n",
     "\n",
@@ -194,10 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0a72ddbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def resto(m, n):\n",
     "    return m - (m // n * n)\n",
@@ -238,12 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b0a5807a",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.12.2 (main, Feb 19 2024, 21:04:51) [GCC 13.2.0]'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "ver, sub = (3, 10)\n",
